2001-04-27  Rob Browning  <rlb@cs.utexas.edu>

	* srfi-13.h
	(scm_reverse_string_concatenate): renamed to
	scm_string_concatentate_reverse.
	(scm_reverse_string_concatenate_shared): renamed to
	scm_string_concatenate_reverse_shared.

2001-04-27  Gary Houston  <ghouston@arglist.com>

	* srfi-13.c (scm_init_srfi_13), srfi-14.c (scm_init_srfi_14):
	add "srfi/" to lines including .x files so they can be found
	when build_dir != src_dir.

2001-04-27  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* Makefile.am (srfi_DATA): Added srfi-9.scm.

	* srfi-9.scm: New file.  Exports `define-record-type'.

2001-04-26  Rob Browning  <rlb@cs.utexas.edu>

	* Makefile.am (srfi_DATA): added srfi-6.scm.
	(srfi_DATA): added srfi-11.scm.
	(srfi_DATA): added srfi-8.scm.
	(srfi_DATA): added srfi-2.scm.

	* srfi-11.scm: new file - exports let-values and let*-values.

	* srfi-6.scm: new file - guile already has srfi-6 procedures
	loaded by default, so this is a dummy file right now.

	* srfi-8.scm: new file - exports receive.

	* srfi-2.scm: new file - just use/export (ice-9 and-let-star)

2001-04-26  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	Changed two procedure names to match final SRFI document.  Thanks
	to Rob Browning for spotting this.
	
	* srfi-13.scm (string-concatenate-reverse),
	(string-concatenate-reverse/shared): Rename from
	reverse-string-concatenate[/shared].

	* srfi-13.c (scm_string_concatenate_reverse_shared): Renamed from
	scm_reverse_string_concatenate_shared.
	(scm_string_concatenate_reverse): Renamed from
	scm_reverse_string_concatenate.

2001-04-25  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* configure.in, autogen.sh: Removed.

	* srfi-13.c (scm_string_replace): Take sizeof (char) into account
	when using memmove().

	* srfi-14.h: Added prototypes for all exported procedures..

	* srfi-13.c: Include srfi-13.h

	* srfi-13.h: New file containing the prototypes.

	* Makefile.am: Removed guile-srfi.texi and info_TEXINFOS variable.